--- a/trunk/Specify/help/main.css
+++ b/trunk/Specify/help/main.css
@@ -7,5 +7,5 @@ span.title { font: sans-serif 18pt bold; }
 span.imgcaption { font: sans-serif; font-size:10pt; font-style:italic; }
 p.imgcaption { font: sans-serif; font-size:10pt; font-style:italic; }
 
-body { font-family: sans-serif;}
+body { font-family: sans-serif; font-size:12pt;}
 
