--- a/trunk/Specify/config/fish/LoanInvoice_subreport1.jrxml
+++ b/trunk/Specify/config/fish/LoanInvoice_subreport1.jrxml
@@ -24,8 +24,7 @@
 	<import value="net.sf.jasperreports.engine.*" />
 	<import value="net.sf.jasperreports.engine.data.*" />
 
-	<parameter name="itemnum" class="java.lang.String"/>
-	
+	<parameter name="itemnum" isForPrompting="true" class="java.lang.String"/>
 	<queryString><![CDATA[SELECT e8.CatalogNumber, e8.FieldNumber, e8.TaxonFullName, e8.Count, e8.Name, e8.Quantity, geography.FullName, e8.QuantityReturned, e8.QuantityResolved, e8.LoanNumber, e8.LoanID,
 e8.StartDate, e8.LocalityName, e8.Lat1Text, e8.Long1Text 
 FROM ( 
@@ -41,7 +40,7 @@ determination.TaxonID, determination.DeterminationStatusID
 FROM collectionobject 
 INNER JOIN determination 
 ON collectionobject.CollectionObjectID = determination.CollectionObjectID 
-WHERE determination.Name = 'Current') e1 
+WHERE determination.DeterminationStatusID = 1) e1 
 INNER JOIN taxon 
 ON e1.TaxonID = taxon.TaxonID) e2 
 INNER JOIN preparation 
